--- a/galeria.css
+++ b/galeria.css
@@ -171,12 +171,8 @@ a {
 
 /* Footer */
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 12px;
   text-align: center;
+  padding: 8px 0;
   font-size: 12px;
   color: white;
   background: rgba(255, 255, 255, 0.2);
